     fvwm with StackTransientParent style.
   - FvwmPager now displays windows that are StickyAcrossPages
     correctly.
   - Fixed a possible crash with modules closing down.
   - Fixed broken demo script fvwm_make_browse_menu.sh.
   - The conditon following a comma separator without whitespace
     padding was previously ignored if the presiding condition was
     multi-worded.

-------------------------------------------------------------------

Changes in beta release 2.5.21 (20-Jan-2007)

* New features:

   - The command Scroll can now be used for interactive scrolling.

* Bug Fixes:

   - Fixed Tile...Placement styles (SmartPlacement) that were
     broken in 2.5.20.

-------------------------------------------------------------------

Changes in beta release 2.5.20 (15-Jan-2007)

* New features:

   - New Style options: StippledIconTitle, !StickyStippledTitle,
     and !StickyStippledIconTitle.
   - Full support for menu context (M) key and mouse bindings.  See
     the section Menu Bindings in the man page for details.
   - Hilighted menu backgrounds now use pixmaps gradients and
     transparency from their related colorset.
   - New window conditions: StickyIcon, StickyAcrossPagesIcon and
     StickyAcrossDesksIcon.

* Changed features:

   - "Mouse n M N" is no longer used to disable or remap the
      builtin tear off menu button. See the section Tear Off Menus
      for details on replacement commands.

* Bug Fixes:

   - FvwmWinList: fix problem with window name/button mixups during
     Init/Restart of fvwm. (bug #1393)
   - It is now possible to switch the viewport while resizing
     windows if "EdgeScroll 0 0" is set.
   - Fixed disappearing windows when aborting interactive resizing
     of maximized windows when unmaximizing them later.
   - Fixed disappearing windows when moving maximized windows and
     unmaximizing them later.
   - Fixed calculation of final location with MoveToPage and